<resources>
    <string name="app_name">First Due</string>
    <string name="action_settings">Settings</string>
    <string name="login_fragment_label">Login</string>
    <string name="register_fragment_label">Register</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">name</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">name@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account?</string>
    <string name="txt_login_header">Welcome!</string>
    <string name="txt_login_subheader">Login to access your stuff</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>

    <string-array name="cateogry_list">
        <item>All</item>
        <item>Physical</item>
        <item>Digital</item>
    </string-array>

    <string-array name="animal_list">
        <item>All</item>
        <item>Odd</item>
        <item>Even</item>
    </string-array>
</resources>