...
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:paddingTop="36dp"
        android:paddingBottom="60dp">

        <TextView
            android:id="@+id/tvCreateAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/txt_register_header"
            android:textColor="@color/black"
...
